--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
             <!-- Juego 5 - Dark Souls -->
             <div class="game-card" data-platforms="steam playstation xbox">
                 <div class="game-rank">5</div>
-                <div class="game-image" style="background-image: url('https://static.wikia.nocookie.net/dark-souls/images/b/b9/Dark_Souls_Portada.jpg/revision/latest?cb=20160801012652&path-prefix=es');"></div>
+                <div class="game-image" style="background-image: url('https://static.wikia.nocookie.net/dark-souls/images/b/b9/Dark_Souls_Portada.jpg');"></div>
                 <div class="game-content">
                     <h3 class="game-title">Dark Souls</h3>
                     <p class="game-description">El juego que inició todo, con su mundo interconectado y desafío implacable.</p>
@@ -863,7 +863,7 @@
             <!-- Juego 7 - Dark Souls II -->
             <div class="game-card" data-platforms="steam playstation xbox">
                 <div class="game-rank">7</div>
-                <div class="game-image" style="background-image: url('https://static.wikia.nocookie.net/dark-souls/images/9/93/Dark_Souls_II_Portada.jpg/revision/latest?cb=20160801013021&path-prefix=es');"></div>
+                <div class="game-image" style="background-image: url('https://static.wikia.nocookie.net/dark-souls/images/9/93/Dark_Souls_II_Portada.jpg');"></div>
                 <div class="game-content">
                     <h3 class="game-title">Dark Souls II</h3>
                     <p class="game-description">Una entrega más experimental que expande el universo con nuevas mecánicas y áreas.</p>
