--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
             <!-- Juego 5 - Dark Souls -->
             <div class="game-card" data-platforms="steam playstation xbox">
                 <div class="game-rank">5</div>
-                <div class="game-image" style="background-image: url('https://static.wikia.nocookie.net/dark-souls/images/b/b9/Dark_Souls_Portada.jpg');"></div>
+                <div class="game-image" style="background-image: url('https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2015/04/463326-analisis-dark-souls-2-scholar-first.jpg?tf=3840x');"></div>
                 <div class="game-content">
                     <h3 class="game-title">Dark Souls</h3>
                     <p class="game-description">El juego que inició todo, con su mundo interconectado y desafío implacable.</p>
@@ -839,7 +839,7 @@
                         <a href="https://www.xbox.com/es-MX/games/store/dark-souls-remastered/9nkjc2f3c6fk" class="platform" target="_blank"><i class="fab fa-xbox"></i></a>
                         <a href="https://www.playstation.com/es-mx/games/dark-souls-remastered/" class="platform" target="_blank"><i class="fab fa-playstation"></i></a>
                     </div>
-                    <button class="buy-button" data-game="Dark Souls" data-price="39.99" data-image="https://static.wikia.nocookie.net/dark-souls/images/b/b9/Dark_Souls_Portada.jpg/revision/latest?cb=20160801012652&path-prefix=es"><i class="fas fa-shopping-cart"></i> Añadir al Carrito</button>
+                    <button class="buy-button" data-game="Dark Souls" data-price="39.99" data-image="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2015/04/463326-analisis-dark-souls-2-scholar-first.jpg?tf=3840x"><i class="fas fa-shopping-cart"></i> Añadir al Carrito</button>
                     <button class="vote-button" data-game="Dark Souls">Votar como el Mejor</button>
                 </div>
             </div>
@@ -863,7 +863,7 @@
             <!-- Juego 7 - Dark Souls II -->
             <div class="game-card" data-platforms="steam playstation xbox">
                 <div class="game-rank">7</div>
-                <div class="game-image" style="background-image: url('https://static.wikia.nocookie.net/dark-souls/images/9/93/Dark_Souls_II_Portada.jpg');"></div>
+                <div class="game-image" style="background-image: url('https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2015/04/463326-analisis-dark-souls-2-scholar-first.jpg?tf=3840x');"></div>
                 <div class="game-content">
                     <h3 class="game-title">Dark Souls II</h3>
                     <p class="game-description">Una entrega más experimental que expande el universo con nuevas mecánicas y áreas.</p>
@@ -873,7 +873,7 @@
                         <a href="https://www.xbox.com/es-MX/games/store/dark-souls-ii-scholar-of-the-first-sin/c28bnf6pdz9p" class="platform" target="_blank"><i class="fab fa-xbox"></i></a>
                         <a href="https://www.playstation.com/es-mx/games/dark-souls-ii-scholar-of-the-first-sin/" class="platform" target="_blank"><i class="fab fa-playstation"></i></a>
                     </div>
-                    <button class="buy-button" data-game="Dark Souls II" data-price="39.99" data-image="https://static.wikia.nocookie.net/dark-souls/images/9/93/Dark_Souls_II_Portada.jpg/revision/latest?cb=20160801013021&path-prefix=es"><i class="fas fa-shopping-cart"></i> Añadir al Carrito</button>
+                    <button class="buy-button" data-game="Dark Souls II" data-price="39.99" data-image="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2015/04/463326-analisis-dark-souls-2-scholar-first.jpg?tf=3840x"><i class="fas fa-shopping-cart"></i> Añadir al Carrito</button>
                     <button class="vote-button" data-game="Dark Souls II">Votar como el Mejor</button>
                 </div>
             </div>
