--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
             <!-- Juego 5 - Dark Souls -->
             <div class="game-card" data-platforms="steam playstation xbox">
                 <div class="game-rank">5</div>
-                <div class="game-image" style="background-image: url('https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2015/04/463326-analisis-dark-souls-2-scholar-first.jpg?tf=3840x');"></div>
+                <div class="game-image" style="background-image: url('https://i.3djuegos.com/juegos/6579/project_dark/fotos/ficha/project_dark-1723897.jpg');"></div>
                 <div class="game-content">
                     <h3 class="game-title">Dark Souls</h3>
                     <p class="game-description">El juego que inició todo, con su mundo interconectado y desafío implacable.</p>
@@ -839,7 +839,7 @@
                         <a href="https://www.xbox.com/es-MX/games/store/dark-souls-remastered/9nkjc2f3c6fk" class="platform" target="_blank"><i class="fab fa-xbox"></i></a>
                         <a href="https://www.playstation.com/es-mx/games/dark-souls-remastered/" class="platform" target="_blank"><i class="fab fa-playstation"></i></a>
                     </div>
-                    <button class="buy-button" data-game="Dark Souls" data-price="39.99" data-image="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2015/04/463326-analisis-dark-souls-2-scholar-first.jpg?tf=3840x"><i class="fas fa-shopping-cart"></i> Añadir al Carrito</button>
+                    <button class="buy-button" data-game="Dark Souls" data-price="39.99" data-image="https://i.3djuegos.com/juegos/6579/project_dark/fotos/ficha/project_dark-1723897.jpg"><i class="fas fa-shopping-cart"></i> Añadir al Carrito</button>
                     <button class="vote-button" data-game="Dark Souls">Votar como el Mejor</button>
                 </div>
             </div>
